# webarena-instance

./: .envrc  .gitignore  .style.yapf  Dockerfile  README.md  flake.nix  host_commands.sh  index.html  launch.sh  launch_and_connect.sh  list-instances.sh  pyproject.toml  setup.sh  setup_host.sh  test.py
app/: Dockerfile  app.py
