[tool.poetry]
name = "webarena-instance"
version = "0.1.0"
description = ""
authors = ["ethanabrooks <ethanabrooks@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
httpx = "^0.27.0"
pytest = "^8.1.1"
requests = "^2.31.0"
ipython = "^8.23.0"
pytest-asyncio = "^0.23.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
